@@ -63,8 +63,22 @@ static GtkWidget *roll_numbers[12 + 1];
 static GtkCheckMenuItem *shuffle_tile;
 static GtkWidget *port_menu;
 static GtkWidget *port_directions[6];
-static GtkWidget *hresize_buttons[2];
-static GtkWidget *vresize_buttons[2];
+static GtkWidget *hresize_buttons[4];
+static GtkWidget *vresize_buttons[4];
+typedef enum {
+	RESIZE_INSERT_LEFT,
+	RESIZE_REMOVE_LEFT,
+	RESIZE_INSERT_RIGHT,
+	RESIZE_REMOVE_RIGHT
+} hresize_type;
+/* order of vresize must match order of hresize */
+typedef enum {
+	RESIZE_INSERT_TOP,
+	RESIZE_REMOVE_TOP,
+	RESIZE_INSERT_BOTTOM,
+	RESIZE_REMOVE_BOTTOM
+} vresize_type;
+
 static GuiMap *gmap;
 static Hex *current_hex;
 
@@ -143,27 +157,23 @@ static void error_dialog(const char *fmt, ...)
 	gtk_widget_destroy(dialog);
 }
 
-static void clear_hex(Hex * hex)
-{
-	g_return_if_fail(hex != NULL);
-	hex->terrain = LAST_TERRAIN;
-	hex->resource = NO_RESOURCE;
-	hex->chit_pos = -1;
-	hex->roll = 0;
-	hex->shuffle = TRUE;
-}
-
 static void fill_map(Map * map)
 {
 	gint x, y;
 
 	for (y = 0; y < map->y_size; y++) {
 		for (x = 0; x < map->x_size; x++) {
-			if (x == map->x_size - 1 && y % 2 == 1)
+                        if (x == 0 && y % 2 == 0 && map->shrink_left) {
+                                continue;
+                        }
+			if (x == map->x_size - 1 && y % 2 == 1 && map->shrink_right) {
 				continue;
-			if (map->grid[y][x] != NULL)
+                        }
+			if (map->grid[y][x] != NULL) {
 				continue;
-			clear_hex(map_add_hex(map, x, y));
+                        }
+                        /* Add a default hex on the empty spot */
+			map_reset_hex(map, x, y);
 		}
 	}
 }
@@ -204,34 +214,46 @@ static gboolean terrain_has_chit(Terrain terrain)
 	return FALSE;
 }
 
-static void build_map_resize(GtkWidget * table, gint row, gint col,
+static void build_map_resize(GtkWidget * table, gint col, gint row,
 			     GtkOrientation dir, GtkWidget ** buttons,
 			     GCallback resize_callback)
 {
-	static const char *symbols[] = { "+", "--" };
-	static gint values[] = { +1, -1 };
+	/* symbols[] must match order of hresize_type and vresize_type; */
+	static const gchar *symbols[] = { GTK_STOCK_ADD, GTK_STOCK_REMOVE, GTK_STOCK_ADD, GTK_STOCK_REMOVE };
+        /* The order must match hresize_type and vresize_type, and also depends on the orientation */
+        static const gchar *tooltip[] = {
+                N_("Insert a row"),
+                N_("Delete a row"),
+                N_("Insert a column"),
+                N_("Delete a column")
+        };
+
 	GtkWidget *box;
 	gint i;
 
-	if (dir == GTK_ORIENTATION_VERTICAL)
+	if (dir == GTK_ORIENTATION_VERTICAL) {
 		box = gtk_vbox_new(FALSE, 0);
-	else
+	} else {
 		box = gtk_hbox_new(FALSE, 0);
+        }
 
-	gtk_box_pack_start(GTK_BOX(box), gtk_fixed_new(), TRUE, TRUE, 0);
+	for (i = 0; i < 4; i++) {
+		buttons[i] = gtk_tool_button_new_from_stock(symbols[i]);
+                gtk_tool_item_set_tooltip_text(GTK_TOOL_ITEM(buttons[i]), _(tooltip[i % 2 + (dir == GTK_ORIENTATION_VERTICAL ? 0 : 2)]));
 
-	for (i = 0; i < 2; i++) {
-		buttons[i] = gtk_button_new_with_label(symbols[i]);
-		gtk_box_pack_start(GTK_BOX(box), buttons[i], FALSE, TRUE,
-				   0);
+		if (i < 2) {
+			gtk_box_pack_start(GTK_BOX(box), buttons[i],
+					   FALSE, TRUE, 0);
+		} else {
+			gtk_box_pack_end(GTK_BOX(box), buttons[i],
+					 FALSE, TRUE, 0);
+                }
 		g_signal_connect(G_OBJECT(buttons[i]), "clicked",
-				 resize_callback,
-				 GINT_TO_POINTER(values[i]));
+				 resize_callback, GINT_TO_POINTER(i));
 	}
-
 	gtk_box_pack_start(GTK_BOX(box), gtk_fixed_new(), TRUE, TRUE, 0);
 
-	gtk_table_attach(GTK_TABLE(table), box, row, row + 1, col, col + 1,
+	gtk_table_attach(GTK_TABLE(table), box, col, col + 1, row, row + 1,
 			 GTK_FILL, GTK_FILL, 0, 0);
 }
 
@@ -381,12 +403,36 @@ static gint key_press_map_cb(GtkWidget * area, GdkEventKey * event,
 	return TRUE;
 }
 
-static void post_change(gint * size, GtkWidget ** buttons, gint amt)
+static void update_resize_buttons(void)
 {
-	*size += amt;
-	gtk_widget_set_sensitive(buttons[0], *size < MAP_SIZE);
-	gtk_widget_set_sensitive(buttons[1], *size > 1);
-	fill_map(gmap->map);
+	gtk_widget_set_sensitive(hresize_buttons[RESIZE_REMOVE_LEFT],
+				 gmap->map->x_size > 1 ||
+				 !(gmap->map->shrink_right ||
+				   gmap->map->shrink_left));
+	gtk_widget_set_sensitive(hresize_buttons[RESIZE_REMOVE_RIGHT],
+				 gmap->map->x_size > 1 ||
+				 !(gmap->map->shrink_right ||
+				   gmap->map->shrink_left));
+	gtk_widget_set_sensitive(hresize_buttons[RESIZE_INSERT_LEFT],
+				 gmap->map->x_size < MAP_SIZE ||
+				 gmap->map->shrink_left);
+	gtk_widget_set_sensitive(hresize_buttons[RESIZE_INSERT_RIGHT],
+				 gmap->map->x_size < MAP_SIZE ||
+				 gmap->map->shrink_right);
+
+	gtk_widget_set_sensitive(vresize_buttons[RESIZE_REMOVE_TOP],
+				 gmap->map->y_size > 1 &&
+				 (gmap->map->x_size < MAP_SIZE ||
+				  gmap->map->shrink_left));
+	gtk_widget_set_sensitive(vresize_buttons[RESIZE_REMOVE_BOTTOM],
+				 gmap->map->y_size > 1);
+	gtk_widget_set_sensitive(vresize_buttons[RESIZE_INSERT_TOP],
+				 gmap->map->y_size < MAP_SIZE
+				 && (gmap->map->x_size < MAP_SIZE
+				     || gmap->map->shrink_left));
+	gtk_widget_set_sensitive(vresize_buttons[RESIZE_INSERT_BOTTOM],
+				 gmap->map->y_size < MAP_SIZE);
+
 	scale_map(gmap);
 	guimap_display(gmap);
 }
@@ -394,31 +440,42 @@ static void post_change(gint * size, GtkWidget ** buttons, gint amt)
 static void change_height(G_GNUC_UNUSED GtkWidget * menu,
 			  gpointer user_data)
 {
-	if (GPOINTER_TO_INT(user_data) < 0) {
-		gint x;
-		for (x = 0; x < gmap->map->x_size; x++)
-			clear_hex(gmap->map->
-				  grid[gmap->map->y_size - 1][x]);
+	switch (GPOINTER_TO_INT(user_data)) {
+	case RESIZE_REMOVE_BOTTOM:
+		map_modify_row_count(gmap->map, MAP_MODIFY_REMOVE, MAP_MODIFY_ROW_BOTTOM);
+		break;
+	case RESIZE_INSERT_BOTTOM:
+		map_modify_row_count(gmap->map, MAP_MODIFY_INSERT, MAP_MODIFY_ROW_BOTTOM);
+		break;
+	case RESIZE_REMOVE_TOP:
+		map_modify_row_count(gmap->map, MAP_MODIFY_REMOVE, MAP_MODIFY_ROW_TOP);
+		break;
+	case RESIZE_INSERT_TOP:
+		map_modify_row_count(gmap->map, MAP_MODIFY_INSERT, MAP_MODIFY_ROW_TOP);
+		break;
 	}
-	post_change(&gmap->map->y_size, vresize_buttons,
-		    GPOINTER_TO_INT(user_data));
+	update_resize_buttons();
 }
 
 static void change_width(G_GNUC_UNUSED GtkWidget * menu,
 			 gpointer user_data)
 {
-	if (GPOINTER_TO_INT(user_data) < 0) {
-		gint x, y;
-		for (y = 0; y < gmap->map->y_size; y++) {
-			if (y % 2 == 0)
-				x = gmap->map->x_size - 1;
-			else
-				x = gmap->map->x_size - 2;
-			clear_hex(gmap->map->grid[y][x]);
-		}
+	switch (GPOINTER_TO_INT(user_data)) {
+	case RESIZE_REMOVE_RIGHT:
+		map_modify_column_count(gmap->map, MAP_MODIFY_REMOVE, MAP_MODIFY_COLUMN_RIGHT);
+		break;
+	case RESIZE_INSERT_RIGHT:
+		map_modify_column_count(gmap->map, MAP_MODIFY_INSERT, MAP_MODIFY_COLUMN_RIGHT);
+		break;
+	case RESIZE_REMOVE_LEFT:
+		map_modify_column_count(gmap->map, MAP_MODIFY_REMOVE, MAP_MODIFY_COLUMN_LEFT);
+		break;
+	case RESIZE_INSERT_LEFT:
+		map_modify_column_count(gmap->map, MAP_MODIFY_INSERT, MAP_MODIFY_COLUMN_LEFT);
+		break;
 	}
-	post_change(&gmap->map->x_size, hresize_buttons,
-		    GPOINTER_TO_INT(user_data));
+	update_resize_buttons();
+
 }
 
 static GtkWidget *build_map(void)
@@ -426,7 +483,7 @@ static GtkWidget *build_map(void)
 	GtkWidget *table;
 	GtkWidget *area;
 
-	table = gtk_table_new(2, 2, FALSE);
+	table = gtk_table_new(4, 2, FALSE);
 
 	gmap = guimap_new();
 	guimap_set_show_no_setup_nodes(gmap, TRUE);
@@ -442,13 +499,13 @@ static GtkWidget *build_map(void)
 			 G_CALLBACK(button_press_map_cb), gmap);
 	g_signal_connect(G_OBJECT(gmap->area), "key_press_event",
 			 G_CALLBACK(key_press_map_cb), gmap);
-	gtk_table_attach(GTK_TABLE(table), gmap->area, 0, 1, 0, 1,
+	gtk_table_attach(GTK_TABLE(table), gmap->area, 0, 1, 2, 3,
 			 GTK_EXPAND | GTK_FILL, GTK_EXPAND | GTK_FILL, 0,
 			 0);
 
-	build_map_resize(table, 0, 1, GTK_ORIENTATION_HORIZONTAL,
+	build_map_resize(table, 1, 2, GTK_ORIENTATION_VERTICAL,
 			 vresize_buttons, G_CALLBACK(change_height));
-	build_map_resize(table, 1, 0, GTK_ORIENTATION_VERTICAL,
+	build_map_resize(table, 0, 3, GTK_ORIENTATION_HORIZONTAL,
 			 hresize_buttons, G_CALLBACK(change_width));
 
 	return table;
@@ -835,6 +892,7 @@ static void load_game(const gchar * file, gboolean is_reload)
 	const gchar *gamefile;
 	GameParams *new_params;
 	gchar *new_filename;
+        gint i;
 
 	if (file == NULL)
 		gamefile = default_game;
@@ -852,8 +910,12 @@ static void load_game(const gchar * file, gboolean is_reload)
 		new_params->title = g_strdup("Untitled");
 		map_free(new_params->map);
 		new_params->map = map_new();
-		new_params->map->x_size = 6;
-		new_params->map->y_size = 6;
+                for (i = 0; i < 6; i++) {
+                        map_modify_row_count(new_params->map, MAP_MODIFY_INSERT, MAP_MODIFY_ROW_BOTTOM);
+                }
+                for (i = 0; i < 11; i++) {
+                        map_modify_column_count(new_params->map, MAP_MODIFY_INSERT, MAP_MODIFY_COLUMN_RIGHT);
+                }
 		new_params->map->chits =
 		    g_array_new(FALSE, FALSE, sizeof(gint));
 		new_filename = NULL;
@@ -876,6 +938,7 @@ static void load_game(const gchar * file, gboolean is_reload)
 		scale_map(gmap);
 		guimap_display(gmap);
 	}
+        update_resize_buttons();
 }
 
 static void save_game(const gchar * file)
